--- a/servicios/desarrollo.html
+++ b/servicios/desarrollo.html
@@ -76,7 +76,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>Copyright © 2023 Paolo Reyes. Todos los derechos reservados.</p>
+                <p id="footer-text"></p>
             </div>
         </div>
         <div id="topico">Desarrollo</div>
