Auto side menu closing

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
                 <nav>
                     <img src="images/logo.png" class="logo">
                     <ul id="sidemenu">
-                        <li><a href="#inicio">Inicio</a></li>
-                        <li><a href="#sobre_mi">Sobre Mi</a></li>
-                        <li><a href="#servicios">Servicios</a></li>
-                        <li><a href="#proyectos">Proyectos</a></li>
-                        <li><a href="#contacto">Contacto</a></li>
+                        <li><a href="#inicio" onclick="closemenu()">Inicio</a></li>
+                        <li><a href="#sobre_mi" onclick="closemenu()">Sobre Mi</a></li>
+                        <li><a href="#servicios" onclick="closemenu()">Servicios</a></li>
+                        <li><a href="#proyectos" onclick="closemenu()">Proyectos</a></li>
+                        <li><a href="#contacto" onclick="closemenu()">Contacto</a></li>
                         <i class="fas fa-times" onclick="closemenu()"></i>
                     </ul>
                     <i class="fas fa-bars" onclick="openmenu()"></i>
