--- a/index.html
+++ b/index.html
@@ -158,8 +158,7 @@
                                 <i class="fa-solid fa-arrows-rotate reload" onclick="generate()"></i>
                             </div>
                             <input type="text" id="captcha" placeholder="Captcha">
-                            <a href="#" class="btn btn2">Enviar</a>
-                            <input class="btn btn2" type="submit" value="Enviar">
+                            <button type="button" class="btn btn2" onclick="send_mail()">Enviar</button>
                         </form>
                         <span id="msg"></span>
                     </div>
