--- a/index.html
+++ b/index.html
@@ -105,31 +105,31 @@
                 <h1 class="subtitle">Mis Proyectos</h1>
                 <div class="work-list">
                     <div class="work">
-                        <img src="images/top2.png">
+                        <img src="images/paolo_yt.png">
                         <div class="layer">
-                            <h3>Proyecto 1</h3>
-                            <p>Descripción</p>
-                            <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                            <h3>Paolo Inspires</h3>
+                            <p>Un proyecto personal de divulgación de ciencia y tecnología por medio de videos de YouTube</p>
+                            <a href="proyectos/paolo-inspires"><i class="fas fa-external-link-alt"></i></a>
                         </div>
                     </div>
                     <div class="work">
-                        <img src="images/top2.png">
+                        <img src="images/FRC-design_2022.jpg">
                         <div class="layer">
-                            <h3>Proyecto 1</h3>
-                            <p>Descripción</p>
-                            <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                            <h3>FIRST</h3>
+                            <p>Creación de robots de competencia de más de 50 kg</p>
+                            <a href="proyectos/first"><i class="fas fa-external-link-alt"></i></a>
                         </div>
                     </div>
                     <div class="work">
-                        <img src="images/top2.png">
+                        <img src="images/e-gokart.png">
                         <div class="layer">
-                            <h3>Proyecto 1</h3>
-                            <p>Descripción</p>
-                            <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                            <h3>E-GoKart</h3>
+                            <p>Go Kart eléctrico hecho de tubos de PVC</p>
+                            <a href="proyectos/e-gokart"><i class="fas fa-external-link-alt"></i></a>
                         </div>
                     </div>
                 </div>
-                <a href="#" class="btn">Ver más</a>     
+                <a href="proyectos/" class="btn">Ver más</a>     
             </div>
         </div>
         <!-- Contacto -->
