projects images added

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                     <div class="work">
-                        <img src="images/FRC-design_2022.jpg">
+                        <img src="images/FRC_design_2022.jpg">
                         <div class="layer">
                             <h3>FIRST</h3>
                             <p>Creación de robots de competencia de más de 50 kg</p>
@@ -121,7 +121,7 @@
                         </div>
                     </div>
                     <div class="work">
-                        <img src="images/e-gokart.png">
+                        <img src="images/e_gokart.png">
                         <div class="layer">
                             <h3>E-GoKart</h3>
                             <p>Go Kart eléctrico hecho de tubos de PVC</p>
