projects link fixed

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="proyectos/" class="btn">Ver más</a>     
+                <a href="proyectos" class="btn">Ver más</a>     
             </div>
         </div>
         <!-- Contacto -->
