--- a/proyectos/paolo-inspires.html
+++ b/proyectos/paolo-inspires.html
@@ -12,6 +12,6 @@
         <div class="copyright">
             <p id="footer-text"></p>
         </div>
-        <script src="js/script.js"></script>
+        <script src="../js/script.js"></script>
     </body>
 </html>
