--- a/servicios/desarrollo.html
+++ b/servicios/desarrollo.html
@@ -11,19 +11,19 @@
         <script src="https://smtpjs.com/v3/smtp.js"></script>
     </head>
     <body>
-        <div class="header-service">
+        <div class="header-subpage">
             <a href="https://paoloreyes.github.io/web/#servicios"><i class="fa-solid fa-angles-left"></i></a>
             <h2>Servicio de Desarrollo Electrónico</h2>
             <span></span>
         </div>
         <div id="Que_Hacemos">
-            <div class="container-service">
-                <div class="row first-section-service">
-                    <div class="service-col-1">
+            <div class="container-subpage">
+                <div class="row first-section-subpage">
+                    <div class="subpage-col-1">
                         <h1 class="subtitle">¿Qué Hacemos?</h1>
                         <p align="justify">Creamos dispositivos a la medida de los usuarios que puedan desempeñar tareas especificas en su vida diaria y en sus negocios, estos dispositivos principalmente involucran el uso de sensores para facilitar el control de otros sistemas, hacer tareas de automatización o incluso reducir el número de trabajadores necesarios.</p>
                     </div>
-                    <div class="service-col-2">
+                    <div class="subpage-col-2">
                         <img src="../images/raspberry.jpeg">
                     </div>
                 </div>
