--- a/servicios/manufactura.html
+++ b/servicios/manufactura.html
@@ -11,19 +11,19 @@
         <script src="https://smtpjs.com/v3/smtp.js"></script>
     </head>
     <body>
-        <div class="header-service">
+        <div class="header-subpage">
             <a href="https://paoloreyes.github.io/web/#servicios"><i class="fa-solid fa-angles-left"></i></a>
             <h2>Servicio de Manufactura de Piezas</h2>
             <span></span>
         </div>
         <div id="Que_Hacemos">
-            <div class="container-service">
-                <div class="row first-section-service">
-                    <div class="service-col-1">
+            <div class="container-subpage">
+                <div class="row first-section-subpage">
+                    <div class="subpage-col-1">
                         <h1 class="subtitle">¿Qué Hacemos?</h1>
                         <p align="justify">Traemos a la realidad cualquier pieza bidimensional en cualquier material con el uso de fresadoras CNC, entre sus muchas aplicaciones este servicio es mayormente usado para la fabricación a medida de decoraciones de negocios, producción de piezas estructurales para sistemas mecánicos y robots de competencia.</p>
                     </div>
-                    <div class="service-col-2">
+                    <div class="subpage-col-2">
                         <img src="../images/cnc.jpg">
                     </div>
                 </div>
