--- a/proyectos/e-gokart.html
+++ b/proyectos/e-gokart.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +7,49 @@
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="data:,">
         <title>E-GoKart</title>
+        <script src="https://kit.fontawesome.com/9041eafba2.js" crossorigin="anonymous"></script>
+        <script src="https://smtpjs.com/v3/smtp.js"></script>
     </head>
     <body>
+        <div class="header-subpage">
+            <a href="https://paoloreyes.github.io/web/#servicios"><i class="fa-solid fa-angles-left"></i></a>
+            <h2>E-GoKart</h2>
+            <span></span>
+        </div>
+        <div id="De_Que_Trata">
+            <div class="container-subpage">
+                <div class="row first-section-subpage">
+                    <div class="subpage-col-1">
+                        <h1 class="subtitle">¿De que trata?</h1>
+                        <p align="justify">Este proyecto cosistió en la elaboración de un go-kart eléctrico hecho a base de tubos de PVC, la idea era buscar un proyecto impactante y fácil de hacer para poder difundir la ciencia y la tecnología a más rincones de México</p>
+                    </div>
+                    <div class="subpage-col-2">
+                        <img src="../images/e_gokart.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="ejemplos">
+            <div class="container">
+                <h1 class="subtitle">Evidencia</h1>
+                <div class="work-list">
+                    <div class="work">
+                        <img src="../images/desarrollo_example_1.png">
+                    </div>
+                    <div class="work">
+                        <img src="../images/desarrollo_example_2.png">
+                    </div>
+                    <div class="work">
+                        <img src="../images/desarrollo_example_3.png">
+                    </div>
+                </div>    
+            </div>
+        </div>
         <div class="copyright">
             <p id="footer-text"></p>
         </div>
+        </div>
+        <div id="topico">Desarrollo</div>
         <script src="../js/script.js"></script>
     </body>
 </html>
