css fixed for subpages

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div id="proyectos">
             <div class="container">
                 <h1 class="subtitle">Mis Proyectos</h1>
-                <div class="work-list">
+                <div class="work-list-main">
                     <div class="work">
                         <img src="images/paolo_yt.png">
                         <div class="layer">
