--- a/servicios/manufactura.html
+++ b/servicios/manufactura.html
@@ -18,12 +18,11 @@
         </div>
         <div id="Que_Hacemos">
             <div class="container-subpage">
-                <div class="row first-section-subpage">
-                    <div class="subpage-col-1">
-                        <h1 class="subtitle">¿Qué Hacemos?</h1>
+                <div class="first-section-subpage">
+                    <h1 class="subtitle">¿Qué Hacemos?</h1>
+                    <div class="small-description">
+                        <img src="../images/cnc.jpg">
                         <p align="justify">Traemos a la realidad cualquier pieza bidimensional en cualquier material con el uso de fresadoras CNC, entre sus muchas aplicaciones este servicio es mayormente usado para la fabricación a medida de decoraciones de negocios, producción de piezas estructurales para sistemas mecánicos y robots de competencia.</p>
-                    </div>
-                    <div class="subpage-col-2">
                         <img src="../images/cnc.jpg">
                     </div>
                 </div>
