--- a/proyectos/e-gokart.html
+++ b/proyectos/e-gokart.html
@@ -18,12 +18,18 @@
         </div>
         <div id="De_Que_Trata">
             <div class="container-subpage">
-                <div class="row first-section-subpage">
-                    <div class="subpage-col-1">
-                        <h1 class="subtitle">¿De que trata?</h1>
-                        <p align="justify">Este proyecto cosistió en la elaboración de un go-kart eléctrico hecho a base de tubos de PVC, la idea era buscar un proyecto impactante y fácil de hacer para poder difundir la ciencia y la tecnología a más rincones de México</p>
-                    </div>
-                    <div class="subpage-col-2">
+                <div class="first-section-subpage">
+                    <h1 class="subtitle">¿De que trata?</h1>
+                    <div class="description">
+                        <img src="../images/e_gokart.png">
+                        <p align="justify">Este proyecto cosistió en la elaboración de un go-kart eléctrico hecho a base de tubos de PVC, la razón de su extraño material de estructura era que quería difundir la ciencia y la tecnología a rincones remotos de México, para hacerlo se me ocurrió la gran idea de llevar una muestra real de lo que es posible hacer gracias a la ciencia y la tecnología. Con este enfoque pensé que una forma impactante de mostrar la ingeniería sería creando un vehículo eléctrico, para construirlo con poco presupuesto y sin muchas herramientas pensé en hacer una abstracción a un LEGO, de esta forma llevaría piezas de PVC precortadas a las escuelas donde se hicieran las pláticas y solo bastaría que los niños las ensamblaran siguiendo un instructivo. Además cada vehículo contaría con:</p>
+                        <ul>
+                            <li>Recarga por energía solar.</li>
+                            <li>Indicador de carga de bateria.</li>
+                            <li>Control por pedal.</li>
+                            <li>Claxon.</li>
+                        </ul>
+                        <p align="justify"><br>Este proyecto debido a su caracter tecnológico-social fue premiado por la compañía "DOW chemical" como el mejor proyecto de latinoamérica del 2019 y me dio la oportunidad de viajar a Kenia a realizar un voluntariado con los otros 27 ganadores de este concurso alrededor del mundo.</p>
                         <img src="../images/e_gokart.png">
                     </div>
                 </div>
@@ -31,7 +37,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencia</h1>
+                <h1 class="subtitle">Evidencias</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/desarrollo_example_1.png">
