--- a/servicios/automatizacion.html
+++ b/servicios/automatizacion.html
@@ -18,12 +18,11 @@
         </div>
         <div id="Que_Hacemos">
             <div class="container-subpage">
-                <div class="row first-section-subpage">
-                    <div class="subpage-col-1">
-                        <h1 class="subtitle">¿Qué Hacemos?</h1>
+                <div class="first-section-subpage">
+                    <h1 class="subtitle">¿Qué Hacemos?</h1>
+                    <div class="small-description">
+                        <img src="../images/python.jpg">
                         <p align="justify">Podemos ayudarte a hacer tu vida más sencilla, si en tu día a día o en tu negocio tiendes a tener que hacer tareas repetitivas en la computadora nosotros podemos crear un programa que pueda hacer estas tareas por ti. Entre sus muchas virtudes la automatización nos permite pasar datos de un sitio a otro por ejemplo de una página web a un excel, generar datos aleatorios, administrar el inventario de un negocio en tiempo real desde tu teléfono y cualquier otra aplicación que se te pueda ocurrir, el límite son tus necesidades.</p>
-                    </div>
-                    <div class="subpage-col-2">
                         <img src="../images/python.jpg">
                     </div>
                 </div>
