--- a/servicios/desarrollo.html
+++ b/servicios/desarrollo.html
@@ -18,12 +18,11 @@
         </div>
         <div id="Que_Hacemos">
             <div class="container-subpage">
-                <div class="row first-section-subpage">
-                    <div class="subpage-col-1">
-                        <h1 class="subtitle">¿Qué Hacemos?</h1>
+                <div class="first-section-subpage">
+                    <h1 class="subtitle">¿Qué Hacemos?</h1>
+                    <div class="small-description">
+                        <img src="../images/raspberry.jpeg">
                         <p align="justify">Creamos dispositivos a la medida de los usuarios que puedan desempeñar tareas especificas en su vida diaria y en sus negocios, estos dispositivos principalmente involucran el uso de sensores para facilitar el control de otros sistemas, hacer tareas de automatización o incluso reducir el número de trabajadores necesarios.</p>
-                    </div>
-                    <div class="subpage-col-2">
                         <img src="../images/raspberry.jpeg">
                     </div>
                 </div>
