first 2022 project added

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <div class="work">
                         <img src="images/FRC_design_2022.jpg">
                         <div class="layer">
-                            <h3>FIRST</h3>
+                            <h3>FIRST 2022</h3>
                             <p>Creación de robots de competencia de más de 50 kg</p>
                             <a href="proyectos/first"><i class="fas fa-external-link-alt"></i></a>
                         </div>
