--- a/proyectos/e-gokart.html
+++ b/proyectos/e-gokart.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div class="header-subpage">
-            <a href="https://paoloreyes.github.io/web/#servicios"><i class="fa-solid fa-angles-left"></i></a>
+            <a href="https://paoloreyes.github.io/web/#proyectos"><i class="fa-solid fa-angles-left"></i></a>
             <h2>E-GoKart</h2>
             <span></span>
         </div>
@@ -40,13 +40,13 @@
                 <h1 class="subtitle">Evidencias</h1>
                 <div class="work-list">
                     <div class="work">
-                        <img src="../images/desarrollo_example_1.png">
+                        <img src="../images/gokart_design_red.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/desarrollo_example_2.png">
+                        <img src="../images/gokart_funcionando.gif">
                     </div>
                     <div class="work">
-                        <img src="../images/desarrollo_example_3.png">
+                        <img src="../images/go_kart_real.jpg">
                     </div>
                 </div>    
             </div>
