--- a/proyectos/first.html
+++ b/proyectos/first.html
@@ -1,17 +1,89 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="data:,">
-        <title>FIRST</title>
+        <title>FIRST 2022</title>
+        <script src="https://kit.fontawesome.com/9041eafba2.js" crossorigin="anonymous"></script>
+        <script src="https://smtpjs.com/v3/smtp.js"></script>
     </head>
     <body>
+        <div class="header-subpage">
+            <a href="https://paoloreyes.github.io/web/#proyectos"><i class="fa-solid fa-angles-left"></i></a>
+            <h2>FIRST 2022</h2>
+            <span></span>
+        </div>
+        <div id="De_Que_Trata">
+            <div class="container-subpage">
+                <div class="first-section-subpage">
+                    <h1 class="subtitle">¿De que trata?</h1>
+                    <div class="description">
+                        <img src="../images/robot_2022.png">
+                        <p align="justify">Este es el último robot que construí para la competencia "FIRST Robotics Competition", al igual que en los años anteriores el proceso entero de diseño fue mio y me involucré como mentor de 3 generaciones de prepa para construirlo, cablearlo y programarlo. El robot tenía como objetivos recoger pelotas del suelo para dispararlas a una portería a más de 2 metros de altura y colgarse en una serie de tres pasamanos a diferentes alturas que iban desde los 1.5 hasta los 2.5 metros. Las características que hacían a este robot único eran:</p>
+                        <ul>
+                            <li>Encoders para conocer la posición del robot en tiempo real.</li>
+                            <li>Cámara para medir ángulo y distancia a la portería.</li>
+                            <li>Encoders para conocer la velocidad del disparo.</li>
+                            <li>Recogedor de pelotas automático.</li>
+                            <li>Secuencia de colgada automática.</li>
+                            <li>Limitadores magnéticos de extensión de brazos.</li>
+                        </ul>
+                        <p align="justify"><br>Este robot ganó el premio de inspiración a la ingeniería en la competencia regional del Tecnológico de Monterrey campus Monterrey y nos dio un pase al mundial para representar a México en Houston ante más de 400 equipos.<br>En el mundial quedamos en el lugar 60 de nuestra división.</p>
+                        <img src="../images/robot_2022.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="ejemplos">
+            <div class="container">
+                <h1 class="subtitle">Evidencias</h1>
+                <div class="work-list">
+                    <div class="work">
+                        <img src="../images/robot_2022_1.png">
+                    </div>
+                    <div class="work">
+                        <img src="../images/robot_2022_2.png">
+                    </div>
+                    <div class="work">
+                        <img src="../images/robot_2022_3.png">
+                    </div>
+                    <div class="work">
+                        <img src="../images/robot_2022_4.png">
+                    </div>
+                    <div class="work">
+                        <img src="../images/robot_2022_5.png">
+                    </div>
+                    <div class="work">
+                        <video autoplay muted loop>
+                            <source src="../images/robot_2022_6.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <div class="work">
+                        <video autoplay muted loop>
+                            <source src="../images/robot_2022_7.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <div class="work">
+                        <video autoplay muted loop>
+                            <source src="../images/robot_2022_8.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <div class="work">
+                        <video autoplay muted loop>
+                            <source src="../images/robot_2022_9.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                </div>    
+            </div>
+        </div>
         <div class="copyright">
             <p id="footer-text"></p>
         </div>
+        </div>
+        <div id="topico">Desarrollo</div>
         <script src="../js/script.js"></script>
     </body>
 </html>
