last main project

--- a/proyectos/first.html
+++ b/proyectos/first.html
@@ -8,7 +8,6 @@
         <link rel="icon" href="data:,">
         <title>FIRST 2022</title>
         <script src="https://kit.fontawesome.com/9041eafba2.js" crossorigin="anonymous"></script>
-        <script src="https://smtpjs.com/v3/smtp.js"></script>
     </head>
     <body>
         <div class="header-subpage">
@@ -21,7 +20,7 @@
                 <div class="first-section-subpage">
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
-                        <img src="../images/robot_2022.png">
+                        <img src="../images/FRC_design_2022.jpg">
                         <p align="justify">Este es el último robot que construí para la competencia "FIRST Robotics Competition", al igual que en los años anteriores el proceso entero de diseño fue mio y me involucré como mentor de 3 generaciones de prepa para construirlo, cablearlo y programarlo. El robot tenía como objetivos recoger pelotas del suelo para dispararlas a una portería a más de 2 metros de altura y colgarse en una serie de tres pasamanos a diferentes alturas que iban desde los 1.5 hasta los 2.5 metros. Las características que hacían a este robot único eran:</p>
                         <ul>
                             <li>Encoders para conocer la posición del robot en tiempo real.</li>
@@ -32,7 +31,7 @@
                             <li>Limitadores magnéticos de extensión de brazos.</li>
                         </ul>
                         <p align="justify"><br>Este robot ganó el premio de inspiración a la ingeniería en la competencia regional del Tecnológico de Monterrey campus Monterrey y nos dio un pase al mundial para representar a México en Houston ante más de 400 equipos.<br>En el mundial quedamos en el lugar 60 de nuestra división.</p>
-                        <img src="../images/robot_2022.png">
+                        <img src="../images/FRC_design_2022.jpg">
                     </div>
                 </div>
             </div>
@@ -49,6 +48,9 @@
                     </div>
                     <div class="work">
                         <img src="../images/robot_2022_3.png">
+                    </div>
+                    <div class="work">
+                        <img src="../images/robot_2022.png">
                     </div>
                     <div class="work">
                         <img src="../images/robot_2022_4.png">
