--- a/proyectos/paolo-inspires.html
+++ b/proyectos/paolo-inspires.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +7,51 @@
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="data:,">
         <title>Paolo Inspires</title>
+        <script src="https://kit.fontawesome.com/9041eafba2.js" crossorigin="anonymous"></script>
     </head>
     <body>
+        <div class="header-subpage">
+            <a href="https://paoloreyes.github.io/web/#proyectos"><i class="fa-solid fa-angles-left"></i></a>
+            <h2>Paolo Inspires</h2>
+            <span></span>
+        </div>
+        <div id="De_Que_Trata">
+            <div class="container-subpage">
+                <div class="first-section-subpage">
+                    <h1 class="subtitle">¿De que trata?</h1>
+                    <div class="description">
+                        <img src="../images/paolo_yt.png">
+                        <p align="justify">Este proyecto es una de mis más grandes pasiones, nace de mi amor por difundir el conocimiento ya que yo creo que este no sirve de nada si no se comparte. La idea de este es crear videos de temas complejos que son muy mal enseñados en las escuelas y de los cuales existen recursos muy limitados en internet y subirlos a YouTube para que cualquier persona pueda acceder a ellos sin la necesidad de tener que pagar por un curso o para aquellas personas que quieren aprender pero no tienen las posibilidades económicas de costear una universidad.<br><br>Los videos son hechos con muchas ganas pero cada día estudio más para poder hacer producciones audiovisuales de mayor calidad, es por ello que mis estándares de producción desde hacer unos meses requieren que todos los contenidos de un video se hagan desde un lenguaje de programación para producir animaciones interesantes y constantes, esto me ha traido muchos seguidores que opinan que los recursos visuales les ayudan a entender mejor el tema.<br><br>El canal no solo me sirve para difundir conocimientos, sino que también para yo aprender más ya que para la creación de un video necesito prepararme y leer para asegurarme que toda la información que comparto es real y de utilidad.</p>
+                        <img src="../images/paolo_yt.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="ejemplos">
+            <div class="container">
+                <h1 class="subtitle">Evidencias</h1>
+                <div class="work-list">
+                    <div class="work">
+                        <img src="../images/youtube_1.png">
+                    </div>
+                    <div class="work">
+                        <video autoplay muted loop>
+                            <source src="../images/manim.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <div class="work">
+                        <video autoplay muted loop>
+                            <source src="../images/kinect.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                </div>    
+            </div>
+        </div>
         <div class="copyright">
             <p id="footer-text"></p>
         </div>
+        </div>
+        <div id="topico">Desarrollo</div>
         <script src="../js/script.js"></script>
     </body>
 </html>
