--- a/proyectos/e-gokart.html
+++ b/proyectos/e-gokart.html
@@ -8,7 +8,6 @@
         <link rel="icon" href="data:,">
         <title>E-GoKart</title>
         <script src="https://kit.fontawesome.com/9041eafba2.js" crossorigin="anonymous"></script>
-        <script src="https://smtpjs.com/v3/smtp.js"></script>
     </head>
     <body>
         <div class="header-subpage">
@@ -43,7 +42,9 @@
                         <img src="../images/gokart_design_red.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/gokart_funcionando.gif">
+                        <video autoplay muted loop>
+                            <source src="../images/gokart_funcionando.mp4" type="video/mp4">
+                        </video>
                     </div>
                     <div class="work">
                         <img src="../images/go_kart_real.jpg">
