adding support for videos in safari

--- a/proyectos/e-gokart.html
+++ b/proyectos/e-gokart.html
@@ -42,7 +42,7 @@
                         <img src="../images/gokart_design_red.jpg">
                     </div>
                     <div class="work">
-                        <video autoplay muted loop>
+                        <video autoplay muted loop playsinline>
                             <source src="../images/gokart_funcionando.mp4" type="video/mp4">
                         </video>
                     </div>
