--- a/proyectos/first.html
+++ b/proyectos/first.html
@@ -59,22 +59,22 @@
                         <img src="../images/robot_2022_5.png">
                     </div>
                     <div class="work">
-                        <video autoplay muted loop>
+                        <video autoplay muted loop playsinline>
                             <source src="../images/robot_2022_6.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="work">
-                        <video autoplay muted loop>
+                        <video autoplay muted loop playsinline>
                             <source src="../images/robot_2022_7.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="work">
-                        <video autoplay muted loop>
+                        <video autoplay muted loop playsinline>
                             <source src="../images/robot_2022_8.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="work">
-                        <video autoplay muted loop>
+                        <video autoplay muted loop playsinline>
                             <source src="../images/robot_2022_9.mp4" type="video/mp4">
                         </video>
                     </div>
