--- a/proyectos/paolo-inspires.html
+++ b/proyectos/paolo-inspires.html
@@ -35,12 +35,12 @@
                         <img src="../images/youtube_1.png">
                     </div>
                     <div class="work">
-                        <video autoplay muted loop>
+                        <video autoplay muted loop playsinline>
                             <source src="../images/manim.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="work">
-                        <video autoplay muted loop>
+                        <video autoplay muted loop playsinline>
                             <source src="../images/kinect.mp4" type="video/mp4">
                         </video>
                     </div>
