testing adding projects

--- a/index.html
+++ b/index.html
@@ -83,19 +83,19 @@
                         <i class="fa-solid fa-screwdriver-wrench"></i>
                         <h2>Manufactura de Piezas</h2>
                         <p align="justify">Puedo ayudarte a traer a la vida cualquier proyecto manufacturando cualquier pieza con mis máquinas CNC.</p>
-                        <a href="https://paoloreyes.github.io/web/servicios/manufactura">¿Quieres saber más?</a>
+                        <a href="./servicios/manufactura">¿Quieres saber más?</a>
                     </div>
                     <div>
                         <i class="fa-solid fa-code"></i>
                         <h2>Automatización</h2>
                         <p align="justify">Puedo ayudarte a automatizar procesos en tu empresa por medio de la creación de programas a tu medidad que puedan reducir costos como la autogestión de inventario, control de empleados, etc.</p>
-                        <a href="https://paoloreyes.github.io/web/servicios/automatizacion">¿Quieres saber más?</a>
+                        <a href="./servicios/automatizacion">¿Quieres saber más?</a>
                     </div>
                     <div>
                         <i class="fa-solid fa-microchip"></i>
                         <h2>Desarrollo de Dispositivos Electrónicos</h2>
                         <p align="justify">Puedo ayudarte a inventar cualquier dispositivo electrónico que te facilite tus actividades diarias como contadores de aforo para tu negocio, juguetes a control remoto, luces que se conecten a alexa o cualquier otro dispositivo IoT.</p>
-                        <a href="https://paoloreyes.github.io/web/servicios/desarrollo">¿Quieres saber más?</a>
+                        <a href="./servicios/desarrollo">¿Quieres saber más?</a>
                     </div>
                 </div>
             </div>
@@ -110,7 +110,7 @@
                         <div class="layer">
                             <h3>Paolo Inspires</h3>
                             <p>Un proyecto personal de divulgación de ciencia y tecnología por medio de videos de YouTube</p>
-                            <a href="proyectos/paolo-inspires"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="./web/proyectos/paolo-inspires"><i class="fas fa-external-link-alt"></i></a>
                         </div>
                     </div>
                     <div class="work">
@@ -118,15 +118,15 @@
                         <div class="layer">
                             <h3>FIRST 2022</h3>
                             <p>Creación de robots de competencia de más de 50 kg</p>
-                            <a href="proyectos/first"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="./proyectos/first-2022"><i class="fas fa-external-link-alt"></i></a>
                         </div>
                     </div>
                     <div class="work">
-                        <img src="images/e_gokart.png">
+                        <img src="images/e_gokart_wheels.png">
                         <div class="layer">
                             <h3>E-GoKart</h3>
                             <p>Go Kart eléctrico hecho de tubos de PVC</p>
-                            <a href="proyectos/e-gokart"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="./proyectos/e-gokart"><i class="fas fa-external-link-alt"></i></a>
                         </div>
                     </div>
                 </div>
@@ -195,6 +195,7 @@
                 sidemenu.style.right = "-200px";
             }
         </script>
-        <script src="js/script.js"></script>
+        <script src="./js/mail.js"></script>
+        <script src="./js/year.js"></script>
     </body>
 </html>
