--- a/proyectos.html
+++ b/proyectos.html
@@ -7,11 +7,23 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="icon" href="data:,">
         <title>Proyectos</title>
+        <script src="https://kit.fontawesome.com/9041eafba2.js" crossorigin="anonymous"></script>
     </head>
     <body>
+        <div class="header-subpage">
+            <a href="https://paoloreyes.github.io/web/"><i class="fa-solid fa-angles-left"></i></a>
+            <h2>Proyectos</h2>
+            <span></span>
+        </div>
+        <div class="container">
+            <div class="work-list" id="workplace">
+                
+            </div>
+        </div>
         <div class="copyright">
             <p id="footer-text"></p>
         </div>
-        <script src="js/script.js"></script>
+        <script src="./js/projects.js"></script>
+        <script src="./js/year.js"></script>
     </body>
 </html>
