--- a/servicios/desarrollo.html
+++ b/servicios/desarrollo.html
@@ -80,6 +80,7 @@
             </div>
         </div>
         <div id="topico">Desarrollo</div>
-        <script src="../js/script.js"></script>
+        <script src="../js/mail.js"></script>
+        <script src="../js/year.js"></script>
     </body>
 </html>
