--- a/proyectos/paolo-inspires.html
+++ b/proyectos/paolo-inspires.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div class="header-subpage">
-            <a href="https://paoloreyes.github.io/web/#proyectos"><i class="fa-solid fa-angles-left"></i></a>
+            <a href="javascript:history.back()"><i class="fa-solid fa-angles-left"></i></a>
             <h2>Paolo Inspires</h2>
             <span></span>
         </div>
@@ -47,11 +47,10 @@
                 </div>    
             </div>
         </div>
-        <div class="copyright">
-            <p id="footer-text"></p>
+            <div class="copyright">
+                <p id="footer-text"></p>
+            </div>
         </div>
-        </div>
-        <div id="topico">Desarrollo</div>
-        <script src="../js/script.js"></script>
+        <script src="../js/year.js"></script>
     </body>
 </html>
