--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="inicio">
             <div class="container">
                 <nav>
-                    <img src="images/logo.png" class="logo">
+                    <img src="./images/logo.png" class="logo">
                     <ul id="sidemenu">
                         <li><a href="#inicio" onclick="closemenu()">Inicio</a></li>
                         <li><a href="#sobre_mi" onclick="closemenu()">Sobre Mi</a></li>
@@ -106,15 +106,15 @@
                 <h1 class="subtitle">Mis Proyectos</h1>
                 <div class="work-list-main">
                     <div class="work">
-                        <img src="images/paolo_yt.png">
+                        <img src="./images/paolo_yt.png">
                         <div class="layer">
                             <h3>Paolo Inspires</h3>
                             <p>Un proyecto personal de divulgación de ciencia y tecnología por medio de videos de YouTube</p>
-                            <a href="./web/proyectos/paolo-inspires"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="./proyectos/paolo-inspires"><i class="fas fa-external-link-alt"></i></a>
                         </div>
                     </div>
                     <div class="work">
-                        <img src="images/FRC_design_2022.jpg">
+                        <img src="./images/FRC_design_2022.jpg">
                         <div class="layer">
                             <h3>FIRST 2022</h3>
                             <p>Creación de robots de competencia de más de 50 kg</p>
@@ -122,7 +122,7 @@
                         </div>
                     </div>
                     <div class="work">
-                        <img src="images/e_gokart_wheels.png">
+                        <img src="./images/e_gokart_wheels.png">
                         <div class="layer">
                             <h3>E-GoKart</h3>
                             <p>Go Kart eléctrico hecho de tubos de PVC</p>
@@ -146,7 +146,7 @@
                             <a href="https://www.instagram.com/yosoypaoloxd/" target="_blank"><i class="fab fa-instagram"></i></a>
                             <a href="https://www.linkedin.com/in/paolo-alfonso-reyes-ramirez-663695200/" target="_blank"><i class="fab fa-linkedin"></i></a>
                         </div>
-                        <a href="images/CV-PaoloReyes.pdf" class="btn btn2">Descargar CV</a>
+                        <a href="./images/CV-PaoloReyes.pdf" class="btn btn2">Descargar CV</a>
                     </div>
                     <div class="contact-right">
                         <form name="enviar">
