--- a/proyectos.html
+++ b/proyectos.html
@@ -16,9 +16,7 @@
             <span></span>
         </div>
         <div class="container">
-            <div class="work-list" id="workplace">
-                
-            </div>
+            <div class="work-list" id="workplace"></div>
         </div>
         <div class="copyright">
             <p id="footer-text"></p>
