more projects added

--- a/proyectos/filtros-3D.html
+++ b/proyectos/filtros-3D.html
@@ -20,9 +20,9 @@
                 <div class="first-section-subpage">
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
-                        <img src="../images/paolo_mask_profile.jpg">
+                        <img src="../images/filtros-3D_profile.jpg">
                         <p align="justify"></p>
-                        <img src="../images/paolo_mask_profile.jpg">
+                        <img src="../images/filtros-3D_profile.jpg">
                     </div>
                 </div>
             </div>
@@ -32,13 +32,13 @@
                 <h1 class="subtitle">Evidencias</h1>
                 <div class="work-list">
                     <div class="work">
-                        <img src="../images/paolo_mask.jpg">
+                        <img src="../images/filtros-3D_1.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/paolo_mask_2.jpg">
+                        <img src="../images/filtros-3D_2.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/paolo_mask_3.jpg">
+                        <img src="../images/filtros-3D_3.jpg">
                     </div>
                 </div>    
             </div>
