--- a/proyectos/first-2022.html
+++ b/proyectos/first-2022.html
@@ -20,7 +20,7 @@
                 <div class="first-section-subpage">
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
-                        <img src="../images/FRC_design_2022.jpg">
+                        <img src="../images/first-2022_profile.jpg">
                         <p align="justify">Este es el último robot que construí para la competencia "FIRST Robotics Competition", al igual que en los años anteriores el proceso entero de diseño fue mio y me involucré como mentor de 3 generaciones de prepa para construirlo, cablearlo y programarlo. El robot tenía como objetivos recoger pelotas del suelo para dispararlas a una portería a más de 2 metros de altura y colgarse en una serie de tres pasamanos a diferentes alturas que iban desde los 1.5 hasta los 2.5 metros. Las características que hacían a este robot único eran:</p>
                         <ul>
                             <li>Encoders para conocer la posición del robot en tiempo real.</li>
@@ -31,7 +31,7 @@
                             <li>Limitadores magnéticos de extensión de brazos.</li>
                         </ul>
                         <p align="justify"><br>Este robot ganó el premio de inspiración a la ingeniería en la competencia regional del Tecnológico de Monterrey campus Monterrey y nos dio un pase al mundial para representar a México en Houston ante más de 400 equipos.<br>En el mundial quedamos en el lugar 60 de nuestra división.</p>
-                        <img src="../images/FRC_design_2022.jpg">
+                        <img src="../images/first-2022_profile.jpg">
                     </div>
                 </div>
             </div>
