--- a/proyectos.html
+++ b/proyectos.html
@@ -12,7 +12,7 @@
     <body>
         <div class="header-subpage">
             <a href="https://paoloreyes.github.io/web/"><i class="fa-solid fa-angles-left"></i></a>
-            <h2>Proyectos</h2>
+            <h2>Mis Proyectos</h2>
             <span></span>
         </div>
         <div class="container">
