--- a/proyectos/e-gokart.html
+++ b/proyectos/e-gokart.html
@@ -20,7 +20,7 @@
                 <div class="first-section-subpage">
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
-                        <img src="../images/e_gokart_wheels.png">
+                        <img src="../images/e-gokart_profile.jpg">
                         <p align="justify">Este proyecto cosistió en la elaboración de un go-kart eléctrico hecho a base de tubos de PVC, la razón de su extraño material de estructura era que quería difundir la ciencia y la tecnología a rincones remotos de México, para hacerlo se me ocurrió la gran idea de llevar una muestra real de lo que es posible hacer gracias a la ciencia y la tecnología. Con este enfoque pensé que una forma impactante de mostrar la ingeniería sería creando un vehículo eléctrico, para construirlo con poco presupuesto y sin muchas herramientas pensé en hacer una abstracción a un LEGO, de esta forma llevaría piezas de PVC precortadas a las escuelas donde se hicieran las pláticas y solo bastaría que los niños las ensamblaran siguiendo un instructivo. Además cada vehículo contaría con:</p>
                         <ul>
                             <li>Recarga por energía solar.</li>
@@ -29,7 +29,7 @@
                             <li>Claxon.</li>
                         </ul>
                         <p align="justify"><br>Este proyecto debido a su caracter tecnológico-social fue premiado por la compañía "DOW chemical" como el mejor proyecto de latinoamérica del 2019 y me dio la oportunidad de viajar a Kenia a realizar un voluntariado con los otros 27 ganadores de este concurso alrededor del mundo.</p>
-                        <img src="../images/e_gokart_wheels.png">
+                        <img src="../images/e-gokart_profile.jpg">
                     </div>
                 </div>
             </div>
@@ -39,18 +39,18 @@
                 <h1 class="subtitle">Evidencias</h1>
                 <div class="work-list">
                     <div class="work">
-                        <img src="../images/e_gokart.png">
+                        <img src="../images/e-gokart_1.png">
                     </div>
                     <div class="work">
-                        <img src="../images/gokart_design_red.jpg">
+                        <img src="../images/e-gokart_2.jpg">
                     </div>
                     <div class="work">
                         <video autoplay muted loop playsinline>
-                            <source src="../images/gokart_funcionando.mp4" type="video/mp4">
+                            <source src="../images/e-gokart_3.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="work">
-                        <img src="../images/go_kart_real.jpg">
+                        <img src="../images/e-gokart_4.jpg">
                     </div>
                 </div>    
             </div>
