--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="container">
                 <div class="row">
                     <div class="about-col-1">
-                        <img src="https://github.com/PaoloReyes/web/blob/main/images/paolo.JPG?raw=true">
+                        <img src="./images/paolo.JPG">
                     </div>
                     <div class="about-col-2">
                         <h1 class="subtitle">Acerca de Mi</h1>
@@ -146,7 +146,7 @@
                             <a href="https://www.instagram.com/yosoypaoloxd/" target="_blank"><i class="fab fa-instagram"></i></a>
                             <a href="https://www.linkedin.com/in/paolo-alfonso-reyes-ramirez-663695200/" target="_blank"><i class="fab fa-linkedin"></i></a>
                         </div>
-                        <a href="./images/CV-PaoloReyes.pdf" class="btn btn2">Descargar CV</a>
+                        <a href="./resources/CV-PaoloReyes.pdf" class="btn btn2">Descargar CV</a>
                     </div>
                     <div class="contact-right">
                         <form name="enviar">
