--- a/proyectos.html
+++ b/proyectos.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div class="header-subpage">
-            <a href="https://paoloreyes.github.io/web/"><i class="fa-solid fa-angles-left"></i></a>
+            <a href="https://paoloreyes.github.io/web/#proyectos"><i class="fa-solid fa-angles-left"></i></a>
             <h2>Mis Proyectos</h2>
             <span></span>
         </div>
